<package>
  <name>celeros</name>
  <version>0.0.2</version>
  <description>
      Celery as a scheduler for ROS systems
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/asmodehn/celeros</url>
  <url type="bugtracker">https://github.com/asmodehn/celeros/issues</url>

  <author email="asmodehn@gmail.com">AlexV</author>
  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>python-tornado</run_depend>
  <run_depend>python-babel</run_depend> <!-- flower requires this -->
  <run_depend>python-amqp</run_depend>
  <run_depend>python-anyjson</run_depend>
  <run_depend>redis-server</run_depend>

  <!-- these dependencies are only for testing -->
  <run_depend>python-yaml</run_depend>
  <build_depend>rostest</build_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>std_srvs</test_depend>

  <!-- documentation dependencies -->
  <build_depend>python-catkin-pkg</build_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>


